[package]
name = "async-prost"
version = "0.4.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/async-prost"
repository = "https://github.com/tyrchen/async-prost"
homepage = "https://github.com/tyrchen/async-prost"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
byteorder = "1.4.3"
either = "1.6.1"
futures-core = "0.3.21"
futures-sink = "0.3.21"
prost = "0.12.0"
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["net"] }

[dev-dependencies]
futures = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tower = "0.7.0-rc4"
slab = "0.4.9"
tower = { version = "0.4.13", features = ["full"] }
